@@ -1,3 +1,10 @@
+2002-01-13  Per Bothner  <per@bothner.com>
+
+	* DisplayFormat.java (getEmacsLispFormat, getCommonLispFormat,
+	getSchemeFormat):  New static functions.
+
+	* DisplayFormat.java (writeChar):  Partially support Emacs format.
+
 2001-12-24  Per Bothner  <per@bothner.com>
 
 	* CountValues.java:  New class.
